config/docker: add multistage block to debian.jinja2
Add a multistage block in debian.jinja2 so other templates can install
extra things in a multi-stage way before the `FROM` statement.

Signed-off-by: Guillaume Tucker <guillaume.tucker@collabora.com>

--- a/config/docker-new/base/debian.jinja2
+++ b/config/docker-new/base/debian.jinja2
@@ -6,10 +6,13 @@
  # Author: Alexandra Pereira <alexandra.pereira@collabora.com>
 -#}
 
-FROM debian:bullseye
 MAINTAINER "KernelCI TSC" <kernelci-tsc@groups.io>
 
 ENV DEBIAN_FRONTEND=noninteractive
+
+{%- block multistage %}{% endblock %}
+
+FROM debian:bullseye
 
 # Docker for jenkins really needs procps otherwise the jenkins side fails
 RUN apt-get update && apt-get install --no-install-recommends -y procps
